# Jellyfin-Migrator

./: .gitignore  README.md  pyproject.toml
examples/: example_config.toml
src/jellyfin_migrator/: __init__.py  argparse_override.py  config.py  id_scanner.py  migrator.py  symlink_fixer.py
